# NeuralNetwork

./: .gitignore  .travis.yml  CMakeLists.txt  Readme.md
NeuralNetwork/: ActivationFunctions.hpp  FeedForwardLayer.cpp  FeedForwardLayer.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  GradientDescent.cpp  GradientDescent.h  InputLayer.cpp  InputLayer.h  LSTM.cpp  LSTM.h  Layer.cpp  Layer.h  LayerException.hpp  LossFunctions.hpp  Matrix.cpp  Matrix.h  MatrixException.hpp  MatrixMath.cpp  MatrixMath.h  Model.cpp  Model.h  NeuralNetwork.cpp  NeuralNetwork.sln  NeuralNetwork.vcxproj  NeuralNetwork.vcxproj.filters  Optimizer.cpp  Optimizer.h  RecurrentLayer.cpp  RecurrentLayer.h  layer.json
NeuralNetworkWin/: ActivationFunctions.hpp  CMakeLists.txt  Constants.h  FeedForwardLayer.cpp  FeedForwardLayer.h  FeedForwardLayerTests.cpp  GPUActivation.cu  GeneticAlgorithm.cpp  GeneticAlgorithm.h  GradientDescent.cpp  GradientDescent.h  InputLayer.cpp  InputLayer.h  InputLayerTests.cpp  JsonIO.cpp  JsonIO.h  LSTM.cpp  LSTM.h  LSTMTests.cpp  Layer.cpp  Layer.h  LossFunctions.hpp  Matrix.cpp  Matrix.h  MatrixGPUMath.cu  MatrixGPUMath.cuh  MatrixMath.cpp  MatrixMath.h  MatrixMathTests.cpp  MatrixTests.cpp  Model.cpp  Model.h  NeuralNetwork.cpp  NeuralNetwork.sln  NeuralNetwork.vcxproj  NeuralNetwork.vcxproj.filters  Optimizer.cpp  Optimizer.h  RecurrentLayer.cpp  RecurrentLayer.h  (+8 more)
docs/: CMakeLists.txt
include/: Constants.h  GPUActivation.cuh  GradientDescent.h  Matrix.h  MatrixGPUMath.cuh  Model.h
include/NeuralNetwork/: ActivationFunctions.hpp  CUDAFunctions.cuh  CUDAMath.cuh  Constants.h  Constants.h.in  FeedForwardLayer.h  GPUActivation.cuh  GeneticAlgorithm.h  GradientDescent.h  InputLayer.h  LSTM.h  Layer.h  LossFunctions.hpp  Matrix.h  MatrixCUDAMath.cuh  MatrixException.hpp  MatrixGPUMath.cuh  Model.h  Optimizer.h  RecurrentLayer.h  TempMatrix.h  Tensor.h  TensorException.hpp
include/NeuralNetwork/Layers/: ConvLayer.h  FeedForwardLayer.h  InputLayer.h  LSTM.h  Layer.h  LayerException.hpp  RecurrentLayer.h
include/NeuralNetwork/LossFunctions/: LossFunction.hpp  LossFunctions.hpp  MSE.hpp
include/NeuralNetwork/Optimizers/: GradientDescent.h  Optimizer.h
src/: CMakeLists.txt  CUDAFunctions.cu  CUDAMath.cu  FeedForwardLayer.cpp  GPUActivation.cu  GeneticAlgorithm.cpp  GradientDescent.cpp  InputLayer.cpp  LSTM.cpp  Layer.cpp  Matrix.cpp  MatrixCUDAMath.cu  MatrixGPUMath.cu  MatrixMath.cpp  Model.cpp  NeuralNetwork.cpp  Optimizer.cpp  RecurrentLayer.cpp  TempMatrix.cpp  Tensor.cpp
src/Layers/: ConvLayer.cpp  FeedForwardLayer.cpp  InputLayer.cpp  LSTM.cpp  Layer.cpp  RecurrentLayer.cpp
src/Optimizers/: GradientDescent.cpp  Optimizer.cpp
tests/: CMakeLists.txt  ConvLayerTests.cpp  FeedForwardLayerTests.cpp  InputLayerTests.cpp  LSTMTests.cpp  MatrixBenchmark.cpp  MatrixTests.cpp  ModelTests.cpp  RecurrentLayerTests.cpp  TensorTests.cpp
